human_written_tests/WebAssembly/processed_control_flow_validation/test_if_86.wast
(assert_invalid
  (module
    (func $type-condition-empty-in-return
      (return (if(then))) (drop)
    )
  )
  "type mismatch"
)